// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot tests <Button title={"ボタン"} size="large"/>: サイズlarge 1`] = `
<ForwardRef
  style={
    Array [
      Object {
        "backgroundColor": "#F2F2F2",
        "borderColor": "#DBDBDB",
        "borderRadius": 10,
        "borderWidth": 1,
        "paddingHorizontal": 10,
      },
      Object {
        "minWidth": 250,
        "paddingVertical": 17,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    ボタン
  </Text>
</ForwardRef>
`;

exports[`button snapshot tests <Button title={"ボタン"} size="middle"/>: サイズmiddle 1`] = `
<ForwardRef
  style={
    Array [
      Object {
        "backgroundColor": "#F2F2F2",
        "borderColor": "#DBDBDB",
        "borderRadius": 10,
        "borderWidth": 1,
        "paddingHorizontal": 10,
      },
      Object {
        "maxWidth": 250,
        "minWidth": 150,
        "paddingVertical": 13,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    ボタン
  </Text>
</ForwardRef>
`;

exports[`button snapshot tests <Button title={"ボタン"} size="small"/>: サイズsmall 1`] = `
<ForwardRef
  style={
    Array [
      Object {
        "backgroundColor": "#F2F2F2",
        "borderColor": "#DBDBDB",
        "borderRadius": 10,
        "borderWidth": 1,
        "paddingHorizontal": 10,
      },
      Object {
        "maxWidth": 150,
        "paddingVertical": 10,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    ボタン
  </Text>
</ForwardRef>
`;

exports[`button snapshot tests <Button title={"ボタン"}/>: title以外のpropsなし 1`] = `
<ForwardRef
  style={
    Array [
      Object {
        "backgroundColor": "#F2F2F2",
        "borderColor": "#DBDBDB",
        "borderRadius": 10,
        "borderWidth": 1,
        "paddingHorizontal": 10,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 18,
          "textAlign": "center",
        },
      ]
    }
  >
    ボタン
  </Text>
</ForwardRef>
`;
